eZ Online Editor 5.x extension Changelog

5.2.1
- Fix #017402: ezoe offset passed to ezoe browse as string not integer
  (merge from trunk rev. 318)

5.2.0beta3
- Updated TinyMCE to 3.3.9

5.2.0beta1
- Fixed bug #016888: IE only : Custom tag do not save when first thing inserted in OE
- Fixed bug #016842: in IE 8, have to edit attribute before entering literal tag
- Fixed bug #016595: Issues with page break and embed objects
- Fixed bug #015513: Custom attributes: checkbox problems
- Fixed bug #017182: Underline is stripped away when saving after changing it with dialogs
- Fixed bug #017163: unwanted &amp;nbsp; in enabling/disabling editor
- Fixed bug #016844: newly created literal tag contains an nbsp
- BC: 'tagAttributeEditor' callback now needs to return element as this is important if element is changed
       All use of this callback has been changed to do that now so look to them for examples.

5.2.0alpha6
- Disable editor if user agent is Mobile Webkit (Iphone/Android) as they do not currently have caret support
- Updated TinyMCE to 3.3.8

5.2.0alpha5
- Make it easier to override groups of editor Buttons by grouping them in settings
- Add support for ',' as button separator in eZOEXMLInput::getEditorLayoutSettings() for button filtering  

5.2.0alpha4
- Updated TinyMCE to 3.3.7
- Fixed bug #016952: IE6 OE 5.0.2 fullscreen mode has no button box

5.2.0alpha3
- Updated TinyMCE to 3.3.6


5.2.0alpha2
- Added extension.xml that replaces ezinfo.php and loading.php starting from eZ Publish 4.4
- Updated TinyMCE to 3.3.4
- Added emotions plugin support (as forked ezemotions plugin)
- Fixed bug #16749: Custom tags layout disapear when switching to fullcreen mode
  BC: All internal css classes for ezoe items using "mceItem" prefix has been changed to use "ezoeItem" prefix
      and mceNonEditable is now ezoeItemNonEditable, this affects you if you have custom content.css code that
      styles custom / embed tags!